[package]
name = "rex_warpgate_api"
version = "0.1.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_system_env = { path = "../system-env" }
anyhow = { workspace = true }
derive_setters = { workspace = true }
rustc-hash = { workspace = true }
schematic = { workspace = true, optional = true, features = ["schema", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
starbase_id = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
schematic = ["dep:schematic", "rex_system_env/schematic", "starbase_id/schematic"]
