[package]
name = "rex_warpgate_pdk"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rex_warpgate_api = { path = "../warpgate-api" }
extism-pdk = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["registry"] }

[dev-dependencies]
rex_warpgate_pdk = { path = ".", features = ["tracing"] }

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
